--- a/package.json
+++ b/package.json
@@ -2,13 +2,29 @@
   "name": "@tdc/query-map",
   "version": "1.0.3",
   "description": "Extension of Map to integrate MongoDB query language via Mingo with Minimongo-style methods",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "files": ["lib /**/*"],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "author": "Chris Adams <chris@thedreamcorporation.com>",
   "license": "MIT",
   "dependencies": {
     "mingo": "^2.2.10"
+  },
+  "devDependencies": {
+    "prettier": "^2.6.2",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.6.4"
   }
 }
